<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mountain_list_item"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/selector_meetup_item"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="0dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/meetup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meetup_item_name"
        android:textColor="#50B06A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:contentDescription="@string/desc_ic_person"
            android:scaleType="center"
            android:src="@drawable/ic_person" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/meetup_item_member_count"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meetup_item_format_person"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="20sp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/ic_mountain"
            android:contentDescription="@string/desc_ic_mountain"
            android:scaleType="center" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meetup_item_mountain"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="20sp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/ic_clock"
            android:contentDescription="@string/desc_ic_click"
            android:scaleType="center" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meetup_item_start"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>