<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mountain_list_item"
    android:layout_width="match_parent"
    android:layout_height="130sp"
    android:background="@color/cardview_dark_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30sp"
    android:paddingTop="12sp"
    android:paddingEnd="30sp"
    android:paddingBottom="12sp">

    <TextView
        android:id="@+id/mountain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_item_dummy_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_height"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/custom_icon_height"
            android:contentDescription="@string/desc_alt_icon"
            android:scaleType="center" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/mountain_alt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mountain_alt_format"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_format"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/custom_marker_red"
            android:contentDescription="@string/desc_location_icon" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/mountain_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_location"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>