<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mountain_list_item"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/recyclerview_select_mountain_image_view"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mountain_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/recyclerview_select_mountain_image_view"
        android:scaleType="centerCrop"
        android:tintMode="src_atop" />

    <TextView
        android:id="@+id/mountain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/list_item_dummy_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mountain_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_height"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/custom_icon_height"
            android:contentDescription="@string/desc_alt_icon"
            android:scaleType="center" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/mountain_alt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mountain_alt_format"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_format"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_row"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:background="@drawable/custom_marker_red"
            android:contentDescription="@string/desc_location_icon" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_alt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/mountain_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/list_item_dummy_location"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>