<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:minWidth="350dp"
    android:minHeight="580dp"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/dialog_meetup_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobutton_polish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/dialog_meetup_radio"
            android:textSize="14sp"
            android:theme="@style/CustomRadioButton" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/to_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_meetup_radio_polish"
            android:textColor="#707070" />

        <ImageButton
            android:id="@+id/imagebutton_show_polish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_arrow"
            android:contentDescription="@string/dialog_meetup_imagebutton" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_meetup_radio_detail"
        android:textColor="#707070"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_meetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/dialog_meetup_no_meetup_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/sad_imoji"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/dialog_meetup_no_meetup_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:visibility="visible"
        android:text="오늘 일정이 없습니다.\n개인 등산을 해보세요!"
        android:textSize="16sp"/>

</LinearLayout>