<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="10dp"
    android:paddingRight="5dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/select_hiking_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/select_hiking_question"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/meetup_hiking_start_btn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_button_primary_background"
        android:padding="5dp"
        android:text="@string/select_hiking_group"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/individual_hiking_start_btn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button_secondary_background"
        android:padding="5dp"
        android:text="@string/select_hiking_individual"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
