<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:minWidth="350dp"
    android:minHeight="150dp"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="25dp"
    android:paddingRight="15dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selected_hiking_mountain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selected_hiking_mountain_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_agree_mountain_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/selected_hiking_mountain_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/dialog_agree_mountain_content_2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/hiking_mountain_cancel_start_btn"
            android:layout_width="25dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_secondary_background"
            android:elevation="2dp"
            android:padding="5dp"
            android:text="@string/button_cancel"
            android:textColor="@color/primary"

            android:textSize="18sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/hiking_mountain_start_btn"
            android:layout_width="25dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_primary_background"
            android:elevation="2dp"
            android:padding="5dp"
            android:text="@string/button_ok"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>